Fix issue where sides of rows got clipped when hovered

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -84,7 +84,7 @@ body {
 
 #main {
     margin-top: var(--navbar-height);
-    padding-inline: 20rem;
+    padding-inline: 18rem;
 }
 
 h1, h2 {
